stability and feature bug fixes